@@ -1,7 +1,8 @@
 3.1
 * Add support for new WBMP and bignum routines in libg15render-1.2
 * Improve FIFO handling to recover dangling FIFOs
-* Add -u/--user command line option to change effective UID/GID
+* Add -u/--user -g/--group command line options to change effective UID/GID
+* Add -r command line option to reuse running g15composer instance
 
 3.0
 * Reimplement g15composer using flex and bison
